gitignore vs2017 v15-folder

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ in_sidplay2/in_sidplay2.VC.db
 in_sidplay2/in_sidplay2.VC.VC.opendb
 in_sidplay2/in_sidplay2.aps
 *.user
+/.vs/in_sidplay2/v15
+/.vs
